tests/valid/flow/01_return_in_function.cps
function f(): integer { return 1; }
