tests/invalid/01_if_else.cps
function g(): integer { if (true) { return 1; } }   // sin else
